<resources>
    <string name="app_name">DayTodayIndia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_us">About Us</string>
    <string name="communicate">Communicate</string>
    <string name="admin_login">Admin Login</string>
    <string name="favourite">Favourite</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="gtiians_yahoo_com">gtiians@yahoo.com</string>
    <string name="sports">Sports</string>
    <string name="entertainment">Entertainment</string>
    <string name="trending">Trending</string>
    <string name="politics">Politics</string>
    <string name="educational">Educational</string>
    <string name="international">International</string>
    <string name="crime">Crime</string>
    <string name="title_activity_fav">FavActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>